Refatorações na classe DTO e service.